import { act, render, screen } from "@testing-library/react";
import React from "react";
import {
  MoreUseEffects,
  OneUseEffect,
  Renders,
  Template,
  WithDeps,
  WithUmount
} from "./components/UseEffect";
import {
  MoreUseEffectsInner,
  TemplateInner
} from "./components/UseEffect.Inner";

beforeEach(() => {
  collector.reset();
});

const defaultTest = (callFunc: () => void, dataTestId?: string) => {
  expect(screen.getByText("Some content")).toBeTruthy();
  expect(
    collector.hasComponent(OneUseEffect.name, { dataTestId })
  ).toBeTruthy();
  expect(callFunc).toBeCalledTimes(1);
  expect(collector.getCallCount(OneUseEffect.name, { dataTestId })).toBe(1);

  const hooks = collector.getReactHooks(OneUseEffect.name, {
    dataTestId
  });

  expect(hooks).not.toBeUndefined();
  expect(hooks?.getAll()).toMatchSnapshot();
  expect(hooks?.getHook("useEffect", 1)).not.toBeUndefined();
  expect(hooks?.getHook("useEffect", 2)).toBeUndefined();
  expect(hooks?.getHook("useEffect", 1)?.action).toBeCalledTimes(1);
  expect(hooks?.getHook("useEffect", 1)?.deps).toEqual([]);
  expect(hooks?.getHook("useEffect", 1)?.unmountAction).toBeUndefined();

  expect(
    collector.getComponent(OneUseEffect.name, { dataTestId })
  ).toMatchSnapshot();
};

describe("useEffect", () => {
  test("Default - Component with one useEffect", () => {
    const callFunc = jest.fn();

    render(<OneUseEffect callFunc={callFunc} />);

    defaultTest(callFunc);
  });

  test("Default with test id - Component with one useEffect", () => {
    const callFunc = jest.fn();
    const dataTestId = "test-id";

    render(<OneUseEffect callFunc={callFunc} data-testid={dataTestId} />);

    defaultTest(callFunc, dataTestId);
  });

  test("More useEffects", () => {
    const callFunc11 = jest.fn();
    const callFunc12 = jest.fn();
    const callFunc13 = jest.fn();
    const callFunc21 = jest.fn();
    const callFunc22 = jest.fn();
    const callFunc23 = jest.fn();

    const caller = {
      setStateInner: ((_state: number) => {}) as React.Dispatch<
        React.SetStateAction<number>
      >,
      setStateParent: ((_state: number) => {}) as React.Dispatch<
        React.SetStateAction<number>
      >
    };

    render(
      <MoreUseEffects
        caller={caller}
        callFunc1={callFunc11}
        callFunc2={callFunc12}
        callFunc3={callFunc13}
        secondEffect={true}
      />
    );

    // check on first render
    const useEffectHooks = collector
      .getReactHooks(MoreUseEffectsInner.name)
      .getHooksByType("useEffect");

    expect(collector.getCallCount(MoreUseEffectsInner.name)).toBe(1);
    expect(
      collector.getReactHooks(MoreUseEffectsInner.name).getAll("useEffect")
        ?.length
    ).toBe(3);
    expect(callFunc11).toBeCalledTimes(1);
    expect(callFunc12).toBeCalledTimes(1);
    expect(callFunc13).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(2)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(3)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(4)).toBeUndefined();

    // second render of inner component
    act(() => {
      caller.setStateInner(1);
    });

    expect(collector.getCallCount(MoreUseEffectsInner.name)).toBe(2);
    expect(
      collector.getReactHooks(MoreUseEffectsInner.name).getAll("useEffect")
        ?.length
    ).toBe(3);
    expect(callFunc11).toBeCalledTimes(1);
    expect(callFunc12).toBeCalledTimes(1);
    expect(callFunc13).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(2)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(3)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(4)).toBeUndefined();

    // third render of parent
    act(() => {
      caller.setStateInner(1);
    });

    expect(collector.getCallCount(MoreUseEffectsInner.name)).toBe(3);
    expect(
      collector.getReactHooks(MoreUseEffectsInner.name).getAll("useEffect")
        ?.length
    ).toBe(3);
    expect(callFunc11).toBeCalledTimes(1);
    expect(callFunc12).toBeCalledTimes(1);
    expect(callFunc13).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(2)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(3)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(4)).toBeUndefined();

    // next render should register less effects
    render(
      <MoreUseEffectsInner
        caller={caller}
        callFunc1={callFunc21}
        callFunc2={callFunc22}
        callFunc3={callFunc23}
        secondEffect={false}
      />
    );

    expect(collector.getCallCount(MoreUseEffectsInner.name)).toBe(4);
    expect(
      collector.getReactHooks(MoreUseEffectsInner.name).getAll("useEffect")
        ?.length
    ).toBe(2);
    expect(callFunc11).toBeCalledTimes(1);
    expect(callFunc12).toBeCalledTimes(1);
    expect(callFunc13).toBeCalledTimes(1);
    expect(callFunc21).toBeCalledTimes(1);
    expect(callFunc22).not.toBeCalled();
    expect(callFunc23).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(2);
    expect(useEffectHooks.get(2)?.action).toBeCalledTimes(2);
    expect(useEffectHooks.get(3)).toBeUndefined();

    // next render should register three effects again
    render(
      <MoreUseEffectsInner
        caller={caller}
        callFunc1={callFunc21}
        callFunc2={callFunc22}
        callFunc3={callFunc23}
        secondEffect={true}
      />
    );

    expect(collector.getCallCount(MoreUseEffectsInner.name)).toBe(5);
    expect(
      collector.getReactHooks(MoreUseEffectsInner.name).getAll("useEffect")
        ?.length
    ).toBe(3);
    expect(callFunc11).toBeCalledTimes(1);
    expect(callFunc12).toBeCalledTimes(1);
    expect(callFunc13).toBeCalledTimes(1);
    expect(callFunc21).toBeCalledTimes(2);
    expect(callFunc22).toBeCalledTimes(1);
    expect(callFunc23).toBeCalledTimes(2);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(3);
    expect(useEffectHooks.get(2)?.action).toBeCalledTimes(2);
    expect(useEffectHooks.get(3)?.action).toBeCalledTimes(3);
    expect(useEffectHooks.get(4)).toBeUndefined();
  });

  test("Unmount registered component", () => {
    const { unmount } = render(<WithUmount />);

    expect(screen.getByText("Registered with unmount")).toBeTruthy();
    expect(collector.hasComponent(WithUmount.name)).toBeTruthy();
    expect(collector.getCallCount(WithUmount.name)).toBe(1);
    expect(collector.getComponent(WithUmount.name)).toMatchSnapshot();

    const useEffectHooks = collector
      .getReactHooks(WithUmount.name)
      .getHooksByType("useEffect");

    expect(useEffectHooks?.get(1)).not.toBeUndefined();
    expect(useEffectHooks?.get(2)).toBeUndefined();
    expect(useEffectHooks?.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks?.get(1)?.deps).toEqual([]);
    expect(useEffectHooks?.get(1)?.unmountAction).not.toBeCalled();

    unmount();
    expect(useEffectHooks?.get(1)?.unmountAction).toBeCalledTimes(1);
  });

  test("Deps in the component", () => {
    const deps = [1, { property: "some" }, "Text", false];

    render(<WithDeps deps={deps} />);

    expect(screen.getByText("Registered with deps")).toBeTruthy();
    expect(collector.hasComponent(WithDeps.name)).toBeTruthy();
    expect(collector.getCallCount(WithDeps.name)).toBe(1);
    expect(collector.getComponent(WithDeps.name)).toMatchSnapshot();

    const useEffectHooks = collector
      .getReactHooks(WithDeps.name)
      .getHooksByType("useEffect");

    expect(useEffectHooks.get(1)).not.toBeUndefined();
    expect(useEffectHooks.get(2)).toBeUndefined();
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.deps).toEqual(deps);
    expect(useEffectHooks.get(1)?.unmountAction).toBeUndefined();
  });

  test("Dynamic render", () => {
    const getExpectedText = (num: number) => `Registered renders ${num}`;
    const caller = {
      action: jest.fn(),
      setState: ((_state: number) => {}) as React.Dispatch<
        React.SetStateAction<number>
      >
    };

    render(<Renders caller={caller} />);

    const useEffectHooks = collector
      .getReactHooks(Renders.name)
      .getHooksByType("useEffect");

    const testSuite = (num: number) => {
      if (num) {
        // manually set state
        act(() => {
          caller.setState(num);
        });
      }

      // check if render is correct and contains correct text
      expect(screen.getByText(getExpectedText(num))).toBeTruthy();
      expect(collector.getCallCount(Renders.name)).toBe(num + 1);

      // only first action shhould be called
      expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
      expect(caller.action).toBeCalledTimes(1);

      // no more hooks should exist
      for (let i = 1; i <= num; i++) {
        expect(useEffectHooks.get(i + 1)).toBeUndefined();
        expect(useEffectHooks.get(i + 1)?.action).toBeUndefined();
      }
    };

    testSuite(0);
    testSuite(1);
    testSuite(2);
  });

  test("Parent render test", () => {
    const getExpectedText = (text: string, num: number) =>
      `Registered template inner ${text}${num}`;
    const caller = {
      action: jest.fn(),
      setState: ((_state) => {}) as React.Dispatch<
        React.SetStateAction<{ num: number; text: string }>
      >,
      unmount: jest.fn()
    };

    const { unmount } = render(<Template caller={caller} />);

    const useEffectHooks = collector
      .getReactHooks(TemplateInner.name)
      .getHooksByType("useEffect");

    // first render
    expect(screen.getByText(getExpectedText("", 0))).toBeTruthy();
    expect(collector.getCallCount(TemplateInner.name)).toBe(1);
    expect(useEffectHooks.get(1)?.deps).toEqual([""]);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks?.get(1)?.unmountAction).not.toBeCalled();
    expect(caller.action).toBeCalledTimes(1);
    expect(caller.unmount).not.toBeCalled();
    expect(caller.action).toHaveBeenLastCalledWith("");

    // second render - changing number should re-render component but not re-call useEffect
    act(() => {
      caller.setState({ num: 1, text: "" });
    });

    expect(screen.getByText(getExpectedText("", 1))).toBeTruthy();
    expect(collector.getCallCount(TemplateInner.name)).toBe(2);
    expect(useEffectHooks.get(1)?.deps).toEqual([""]);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(1);
    expect(useEffectHooks.get(1)?.unmountAction).not.toBeCalled();
    expect(caller.action).toBeCalledTimes(1);
    expect(caller.unmount).not.toBeCalled();
    expect(caller.action).toHaveBeenLastCalledWith("");

    // third render - changing text should re-render component and re-call useEffect
    act(() => {
      caller.setState({ num: 1, text: "text" });
    });

    expect(screen.getByText(getExpectedText("text", 1))).toBeTruthy();
    expect(collector.getCallCount(TemplateInner.name)).toBe(3);
    expect(useEffectHooks.get(1)?.deps).toEqual(["text"]);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(2);
    expect(useEffectHooks.get(1)?.unmountAction).toBeCalledTimes(1);
    expect(caller.action).toBeCalledTimes(2);
    expect(caller.unmount).toBeCalledTimes(1);
    expect(caller.action).toHaveBeenLastCalledWith("text");
    expect(caller.unmount).toHaveBeenLastCalledWith(0);

    // fourth render - changing number should re-render component and not re-call useEffect
    act(() => {
      caller.setState({ num: 5, text: "text" });
    });

    expect(screen.getByText(getExpectedText("text", 5))).toBeTruthy();
    expect(collector.getCallCount(Template.name)).toBe(4);
    expect(useEffectHooks.get(1)?.deps).toEqual(["text"]);
    expect(useEffectHooks.get(1)?.action).toBeCalledTimes(2);
    expect(useEffectHooks.get(1)?.unmountAction).toBeCalledTimes(1);
    expect(caller.action).toBeCalledTimes(2);
    expect(caller.unmount).toBeCalledTimes(1);
    expect(caller.action).toHaveBeenLastCalledWith("text");
    expect(caller.unmount).toHaveBeenLastCalledWith(0);
  });
});
